--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>My Site Title</title>
+    </head>
+    <body>
+        <h1>Tests</h1>
+        <p>this is my first Document</p>
+    </body>
+
+</html>
